--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,23 @@ minio==7.1.14
 # A choisir entre la version MAC ou autre OS
 # tensorflow_macos==2.12.0
 # tensorflow==2.12.0
+
+Pillow~=9.5.0
+pip~=22.3.1
+wheel~=0.38.4
+py4j~=0.10.9.5
+pytz~=2023.3
+certifi~=2022.12.7
+urllib3~=1.26.15
+setuptools~=65.5.1
+MarkupSafe~=2.1.2
+python-dateutil~=2.8.2
+scipy~=1.10.1
+cycler~=0.11.0
+six~=1.16.0
+contourpy~=1.0.7
+fonttools~=4.39.3
+pyparsing~=3.0.9
+packaging~=23.1
+kiwisolver~=1.4.4
+tensorflow~=2.12.0
